# MARIO-2K24

./: LICENSE  README.md  linux_install.sh  linux_installations.sh  mac_installations.sh
1_chatter_listener/: README.md
2_simulation_dh/: README.md
3_simulation_rviz/: CMakeLists.txt  README.md
4_simulation_gazebo/: CMakeLists.txt  README.md  package.xml
4_simulation_gazebo/launch/: basic_gazebo.launch.py  mario.launch.py
4_simulation_gazebo/scripts/: forward_kinematics.py  inverse_kinematics_module.py
4_simulation_gazebo/urdf/: manipulator.urdf
activities/teleop_controller/: teleop_key.py
firmware/1_servo_set_zero/: README.md
firmware/2_servo_sweep/: README.md
firmware/2_servo_sweep/main/: main.c
firmware/3_microros_rviz/: README.md
firmware/4_microros_gazebo/: README.md
firmware/4_microros_gazebo/main/: CMakeLists.txt  main.c
firmware/5_servo_test_webserver/: README.md
firmware/5_servo_test_webserver/main/: main.c
